--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
         </header>
 
-        <div class="sidebar">
+        <aside class="sidebar"> <!--para menus laterais-->
             <nav> <!--para navegacao-->
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -50,8 +50,174 @@
                     <a href=""><i class="fab fa-github"></i></a> 
                     <a href=""><i class="fab fa-twitter"></i></a>
                 </div>
-        </div>
+        </aside>
 
+       <!-- section.sessao-conhecimentos>(.sessao-header>h1)+.conhecimentos>(.conhecimento>(.
+        conhecimento-header>i.fab+h3).conhecimento-text>p{Lorem30})*6 -->
+
+        <section class="sessao-conhecimentos" id="conhecimentos">
+            <div class="sessao-header">
+              <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-html5"></i>
+                  <h3>HTML</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui vel obcaecati eaque quos, labore quibusdam incidunt dolores vitae velit voluptates esse omnis enim, dolorem eveniet. Rem ab obcaecati totam ipsum!</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-css3-alt"></i>
+                  <h3>CSS</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore pariatur asperiores incidunt quod, sed aspernatur eos commodi ex nostrum consequuntur aut vero cum illum perferendis earum, eveniet hic itaque. Quod.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fas fa-pencil-alt"></i>
+                  <h3>Design</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa ex eius voluptatem deleniti alias commodi doloremque aspernatur id adipisci quia ea, distinctio maxime, at nemo. Officiis suscipit excepturi quia aut?</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-js"></i>
+                  <h3>Javascript</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quas facere alias, reprehenderit ullam quibusdam itaque dolor nulla odio inventore culpa molestiae porro ea ad illo, quos dicta ratione quisquam?
+                  </p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-bootstrap"></i>
+                  <h3>Boostrap</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sequi, quas illo dolor totam voluptas pariatur harum blanditiis veritatis culpa doloremque aspernatur nesciunt dicta iure fuga similique ad, ut impedit.</p>
+                </div>
+              </div>
+              <div class="conhecimento">
+                <div class="conhecimento-header">
+                  <i class="fab fa-github"></i>
+                  <h3>Git e GitHub</h3>
+                </div>
+                <div class="conhecimento-text">
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet facilis distinctio quaerat eaque ratione, molestias incidunt a iusto, unde quos magnam ullam exercitationem velit alias, fuga in explicabo ex laborum!</p>
+                </div>
+              </div>
+              <div class="conhecimentos-img-wrapper">
+                <img src="imagens/conhecimentos.png" alt="imagem conhecimento">
+              </div>
+            </div>
+          </section> 
+          
+          <section class="sessao-projetos">
+            <div class="sessao-header">
+              <h1>Projetos</h1>
+            </div>
+
+            <div class="projetos">
+              <div class="card">
+                <div class="card-img-wrapper">
+                  <img src="Imagens/proj1.jpg" alt="imagem do projeto ToDo">
+                </div>
+                <div class="card-info">
+                  <h2>ToDo List</h2>
+                  <h3>Javascript</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta eius vel magni quo 
+                    odio voluptate perferendis libero assumenda mollitia ipsa!</p>
+                  <button class="btn">Saiba Mais</button>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-img-wrapper">
+                  <img src="Imagens/proj2.jpg" alt="imagem do projeto Maratona">
+                </div>
+                <div class="card-info">
+                  <h2>Maratona</h2>
+                  <h3>HTML, CSS</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, quos itaque 
+                    aspernatur quibusdam nulla atque doloribus voluptatibus amet eius quisquam?</p>
+                  <button class="btn">Saiba Mais</button>
+                </div>
+              </div>
+              <div class="card">  
+                <div class="card-img-wrapper">
+                  <img src="Imagens/proj3.jpg" alt="imagem do projeto Casa Bela">
+                </div>
+                <div class="card-info">
+                  <h2>Cada Bela</h2>
+                  <h3>HTML</h3>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut ratione voluptas ipsam 
+                    earum eveniet hic? Iure praesentium aperiam accusantium aspernatur?</p>
+                  <button class="btn">Saiba Mais</button>
+                </div>
+              </div>
+            </div>
+            </div>
+          </section>
+
+          <section class="sessao-contato">
+            <div class="contato-wrapper">
+              <div class="contato-left"></div>
+              <div class="contato-right">
+                <h1>Contato</h1>
+                <form action="">
+                  <div class="input-group">
+                    <input type="text" class="field" id="nome">
+                    <label for="nome" class="field-label">Nome</label>
+                  </div>
+                  <div class="input-group">
+                    <input type="text" class="field" id="email">
+                    <label for="email" class="field-label">E-mail</label>
+                  </div>
+                  <div class="input-group">
+                    <textarea class="field" id="mensagem"></textarea>
+                    <label for="mensagem" class="field-label">Mensagem</label>
+                  </div>
+                  <button type="submit" class="btn btn-submit">Enviar</button>
+                </form>                  <!---tera a classe btn e mais uma que é para edição se necessario-->
+              </div>
+            </div>
+          </section>
+
+          <section class="sessao-orcamento">
+            <div class="orcamento-wrapper">
+              <h1>Faça um orçamento</h1>
+              <form>
+                <label for="qtde">Quantidade de Páginas</label>
+                <input type="number" min="1" name="qtde" id="qtde">
+                <label for="js">Preciso de um script JS</label>
+                <input type="checkbox" name="js" id="js">
+                <label>Layout</label>
+                <div class="group-layout">
+                <div>
+                  <input type="radio" name="layout" id="layout-sim">
+                  <label for="layout-sim">Presico de um Layout</label>
+                </div>
+             
+                <div>
+                <input type="radio" name="layout" id="layout-nao">
+                <label for="layout-nao">Já possuo um Layout</label>
+              </div>
+             </div>
+  
+             <label for="prazo">Prazo</label>
+             <input type="range" name="prazo" id="prazo">
+             <button type="submit" class="btn btn-orcamento">Enviar</button>
+              </form>
+            </div>
+          </section>
     </div>
 
 </body>
